# crm-agent

./: .env  README.md  main.py  pyproject.toml
src/: __init__.py  agent.py  utils.py
src/models/: __init__.py  crm_entities.py  state.py
src/nodes/: action_planning.py  context_augmentation.py  entity_resolution.py  information_extraction.py  validation.py
src/tools/: __init__.py  crm_tools.py  mock_crm.py
