[project]
name = "crm-agent"
version = "0.1.0"
description = "Meeting notes CRM agent with LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.1.0",
    "pydantic>=2.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.20.0",
    "dotenv>=0.9.9",
]
